tests/Project2/student_test/test_2_s10.spl
int foo(int number, float f)
{
    return 555;
}

int main()
{
    int a = foo(1, 114.514);
    int b = foo(114.514, 1);
    int e = foo(1, 114514);
    int c = foo(1);

    int d = a();
}